Make sure reservation page skeleton card text shrinks on smaller screens

--- a/src/stories/Blocks/reservation-page/reservation-page-skeleton.scss
+++ b/src/stories/Blocks/reservation-page/reservation-page-skeleton.scss
@@ -15,5 +15,9 @@
 
   & .list-reservation__information {
     min-width: 200px;
+
+    @include media-query__x-small("max-width") {
+      min-width: 100px;
+    }
   }
 }
